--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: splash
 author_profile: true
 header:
-  overlay_color: "#000"
+  overlay_color: "#ff0000"
 excerpt: "Bacona ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop."
 intro:
   - excerpt: 'Nullam suscipit et nam, tellus velit pellentesque at malesuada, enim eaque. Quis nulla, netus tempor in diam gravida tincidunt, *proin faucibus* voluptate felis id sollicitudin. Centered with `type="center"`'
