--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: splash
 author_profile: true 
 header:
-  overlay_color: "#fff"
+  image: /assets/images/marmat_splash1.jpg
+<!--  # overlay_color: "#fff" -->
 excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop." 
 
 
