--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: splash
 author_profile: true 
 header:
-  image: /assets/images/marmat_splash1.jpg
+  overlay_image: /assets/images/marmat_splash1.jpg
 <!--  # overlay_color: "#fff" -->
 excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop." 
 
