--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
+
 ---
+title: "mattar lab"
 layout: splash
-author_profile: true 
 header:
+  overlay_color: "#000"
+  overlay_filter: "0.5"
   overlay_image: /assets/images/marmat_splash1.jpg
-<!--  # overlay_color: "#fff" -->
-excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop." 
-
-
+excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop."
 ---
-
-
 
