--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 title: "            mattar lab"
 layout: splash
 header:
-<!--   overlay_color: "#ffffff"
-  overlay_filter: "0.5" -->
+  overlay_color: "#fff"
+  overlay_filter: "0.1"
   overlay_image: /assets/images/marmat_splash1.jpg
 excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop."
 ---
