--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
-title: "        mattar lab"
+title: "mattar lab"
 layout: splash
+author_profile: true 
 header:
   overlay_color: "#fff"
-  overlay_filter: "0.1"
-  overlay_image: /assets/images/marmat_splash1.jpg
-excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop."
----
+excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop." 
 
+
+---
