--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
-title: "mattar lab"
-layout: splash
+layout: single
+<!-- layout: splash
 author_profile: true 
 header:
   overlay_color: "#fff"
-excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop." 
-
-
+excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop."  -->
 ---
+
+<h1> mattar <br> lab </h1>
