--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 ---
-title: "mattar lab"
 layout: splash
-author_profile: true 
+<!-- author_profile: true 
 header:
   overlay_color: "#fff"
-excerpt: "Bacon ipsum dolor sit amet salami." 
+excerpt: "Bacon ipsum dolor sit amet salami." -->
+intro:
+  - excerpt: 'mattar lab'
 ---
+{% include feature_row id="intro" type="center" %}
