--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 ---
+title: 'mattar lab'
 layout: splash
 ---
+
+<h3>
+  We use theoretical and experimental approaches to understand how we simulate the future to guide our decisions.
+</h3>
