--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ title: 'mattar lab'
 layout: splash
 ---
 
+<h2>
+  mattar
+  lab
+</h2>
 <h3>
   We use theoretical and experimental approaches to understand how we simulate the future to guide our decisions.
 </h3>
