--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@ title: 'mattar lab'
 layout: splash
 ---
 
-<h1>mattar</h1><br>
-<h1>lab</h1>
+<h1>mattar<br>lab</h1>
 <h3>
   We use theoretical and experimental approaches to understand how we simulate the future to guide our decisions.
 </h3>
