--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 title:'mattar lab'
-layout: splash
+layout: single
 ---
-<h1>mattar<br>lab</h1>
+<!-- <h1>mattar<br>lab</h1> -->
 <h3>
   We use theoretical and experimental approaches to understand how we simulate the future to guide our decisions.
 </h3>
