--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 title:'mattar lab'
 layout: single
 ---
-<!-- <h1>mattar<br>lab</h1> -->
+<!-- <h1>mattar<br>lab</h1>
 <h3>
   We use theoretical and experimental approaches to understand how we simulate the future to guide our decisions.
-</h3>
+</h3> -->
+
+mattar
+
+lab
