--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
-title:'mattar lab'
-layout: default
+title: 'mattar lab'
+layout: splash
 ---
-<!-- <h1>mattar<br>lab</h1>
+
+<h2>
+  mattar
+  lab
+</h2>
 <h3>
   We use theoretical and experimental approaches to understand how we simulate the future to guide our decisions.
-</h3> -->
-
-mattar
-
-lab
+</h3>
