--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@ title: 'mattar lab'
 layout: single
 ---
 
-<h2>
-  mattar
-  lab
-</h2>
+<h2> mattar<br>lab</h2>
 <h3>
   We use theoretical and experimental approaches to understand how we simulate the future to guide our decisions.
 </h3>
