--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@ layout: home
 
 <h1> mattar<br>lab</h1>
 <h3>
-  We use theoretical and experimental approaches to understand how we simulate the future to guide our decisions.
+Our lab is located in the Department of Cognitive Science at University of California, San Diego.
+
+We develop computational models and neuroscientific experiments to understand how our brains simulate the future to guide our decisions.
 </h3>
