--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 title: 'mattar lab'
 layout: home
 ---
-<div class=container3>
+<div class=centeredcontainer>
 <h1> mattar<br>lab</h1>
+<p><h4>Our lab is located in the Department of Cognitive Science at University of California, San Diego.</h4>
+
 <p><h3>
-Our lab is located in the Department of Cognitive Science at University of California, San Diego.
-</h3>
-<p><h3>
-We develop computational models and neuroscientific experiments to understand how our brains simulate the future to guide our decisions.
-</h3>
+We develop computational models and neuroscientific experiments to understand how our brains simulate the future to guide our decisions.</h4>
+
 </div>
+
