--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ layout: home
 
 <h1> mattar<br>lab</h1>
 
-<h5>
-<p>MMMMOur lab is located in the Department of Cognitive Science at University of California, San Diego.
+<h6>
+<p>Our lab is located in the Department of Cognitive Science at University of California, San Diego.
 
 <p>We develop computational models and neuroscientific experiments to understand how our brains simulate the future to guide our decisions.
-</h5>
+</h6>
 
 </div>
 
