--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 title: 'mattar lab'
 layout: home
 ---
-<div class=centeredcontainer>
+<div class="splash_content">
+        <h1>How to Center</h1>
+        <h2>Anything with HTML & CSS</h2>
+</div>
+
 
 <h1> mattar<br>lab</h1>
 
 
-<p>Our lab is located in the Department of Cognitive Science at University of California, San Diego.
+<p>MMOur lab is located in the Department of Cognitive Science at University of California, San Diego.
 
 <p>We develop computational models and neuroscientific experiments to understand how our brains simulate the future to guide our decisions.
 
-
-</div>
 
