--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@ layout: home
 <div class="splash_content">
 <h1> mattar<br>lab</h1>
 
-
-<p>Our lab is located in the Department of Cognitive Science at University of California, San Diego.
+<p>MMOur lab is located in the Department of Cognitive Science at University of California, San Diego.
 
 <p>We develop computational models and neuroscientific experiments to understand how our brains simulate the future to guide our decisions.
 </div>
