--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ title: 'mattar lab'
 layout: home
 ---
 <div class="splash_content">
-<div><h1> mattar<br>lab</h1></div>
+<h1> mattar<br>lab</h1>
 
-<div><p>OOur lab is located in the Department of Cognitive Science at University of California, San Diego.</div>
+<!-- <p>Our lab is located in the Department of Cognitive Science at University of California, San Diego.
 
-<div><p>We develop computational models and neuroscientific experiments to understand how our brains simulate the future to guide our decisions.</div>
+<p>We develop computational models and neuroscientific experiments to understand how our brains simulate the future to guide our decisions. -->
 
 </div>
 
